--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -34,7 +34,7 @@
                     </li>
                     <li class="divider-vertical"></li>
                     <li{% if 'relations' == route %} class="active"{% endif %}><a href="{{ path('relations') }}">Relations</a></li>
-                    <li{% if 'map' == route %} class="active"{% endif %}><a href="#">Map</a></li>
+                    <li{% if 'map' == route %} class="active"{% endif %}><a href="{{ path('map') }}">Map</a></li>
                     <li><a href="#">Statistics</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
