--- a/app/Resources/views/include/searchbox.html.twig
+++ b/app/Resources/views/include/searchbox.html.twig
@@ -26,7 +26,7 @@
         <div role="tabpanel" class="tab-pane fade" id="what">
             <p>Pick one or more subjects for which to search.</p>
             <div style="max-height: 300px; overflow-y: scroll;">
-            <div class="js-tree treeview" data-tree="{{ subjectGroupTree|json_encode }}"></div>
+            <div class="js-tree treeview" data-tree="{{ subjectGroupTree()|json_encode }}"></div>
             </div>
             <form action="{{ path('search') }}" method="get">
                 <p class="text-right" style="margin-bottom: 0;">
