Parse orgName/affiliation and do not add abbreviated firstName in shortName

--- a/app/Resources/views/include/aspect.html.twig
+++ b/app/Resources/views/include/aspect.html.twig
@@ -24,7 +24,9 @@
     Studied {{ macro.subjects(aspect) }}{{ macro.places(aspect) }}
     {{ macro.comment(aspect) }}
 {% elseif "career" == aspect.type %}
-    {% if not aspect.occupation %}
+    {% if aspect.affiliation %}
+        Affiliated with the <em>{{ aspect.affiliation }}</em>{{ macro.places(aspect) }}
+    {% elseif not aspect.occupation %}
         Occupied himself with {{ macro.subjects(aspect) }}{{ macro.places(aspect) }}
     {% else %}
         <a href="{{ path('search', {occupation:aspect.occupation}) }}">{{ aspect.occupation }}</a>{% if aspect.subjects|length %} of {{ macro.subjects(aspect) }}{% endif %}{{ macro.places(aspect) }}
