--- a/app/Resources/less/custom.less
+++ b/app/Resources/less/custom.less
@@ -948,3 +948,52 @@ table.table.table-unbordered {
     border-top: 0 none;
   }
 }
+
+body.plain {
+  padding-top: 100px;
+
+  div.narrower, footer, header {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  .jumbotron {
+    margin-top: 30px;
+
+    h1 {
+      font-family: "Montserrat", Helvetica, Arial, sans-serif;
+      text-transform: uppercase;
+      font-weight: 400;
+      font-size: 40px;
+
+      span.red {
+        font-weight: 700;
+        color: #a13 !important;
+      }
+    }
+
+    &.custom {
+      padding: 30px;
+
+      h1 {
+        margin: 0;
+      }
+    }
+  }
+}
+
+body.splash {
+
+  footer div.logos, footer {
+    margin-top: 30px;
+  }
+
+  div.logos a {
+    margin-right: 30px;
+  }
+
+  div.logos a img {
+    height: 30px;
+  }
+
+}
