Finish search refinement

--- a/app/Resources/less/custom.less
+++ b/app/Resources/less/custom.less
@@ -997,3 +997,11 @@ body.splash {
   }
 
 }
+
+
+.date-refine {
+  a, a:link, a:focus, a:visited, a:hover {
+    border-bottom: 1px dotted @abbr-border-color;
+    text-decoration: none;
+  }
+}
