--- a/app/Resources/views/search/includes/modals.html.twig
+++ b/app/Resources/views/search/includes/modals.html.twig
@@ -1,3 +1,35 @@
+{% embed "modal.html.twig" with {id: "modal-date", class: "", title: "Refine by Date Range", footer: true} %}
+    {% block body %}
+        <div class="row form-group">
+            <table class="time-slider">
+                <tr>
+                    <td class="input text-right">
+                        <input type="text" name="from" id="when-from" value="{{ query.from|default(1490) }}" class="form-control"/>
+                    </td>
+                    <td>
+                        <input
+                                type="text"
+                                class="when-slider"
+                                value=""
+                                data-slider-min="1490"
+                                data-slider-max="1890"
+                                data-slider-step="1"
+                                data-slider-value="[{{ query.from|default(1490) }},{{ query.to|default(1890) }}]"
+                        />
+                    </td>
+                    <td class="input">
+                        <input type="text" name="to" id="when-to" value="{{ query.to|default(1890) }}" class="form-control"/>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    {% endblock %}
+    {% block buttons %}
+    <button type="button" class="btn btn-primary js-apply-daterange" data-url="{{ path('search') }}" data-params="{{ params|json_encode }}">Apply</button>
+    {% endblock %}
+{% endembed %}
+
+
 {% if filter.sources is defined and filter.sources|length > 1 %}
     {% embed "modal.html.twig" with {id: "modal-sources", class: "refinement", title: "Refine by Source"} %}
         {% block body %}
@@ -68,7 +100,7 @@
                                             <em>{{ node.text }}</em>
                                             <ul class="list-unstyled list-indented">
                                                 {% for childNode in node.nodes %}
-                                                    <li><a href="{{ path(search, params|add_subject(childNode.id)) }}">{{ childNode.text }}</a></li>
+                                                    <li><a href="{{ path('search', params|str_add('subjects', childNode.id)) }}">{{ childNode.text }}</a></li>
                                                 {% endfor %}
                                             </ul>
                                         {% else %}
