--- a/app/Resources/views/search/includes/refine.html.twig
+++ b/app/Resources/views/search/includes/refine.html.twig
@@ -1,38 +1,45 @@
 {% import "macros.html.twig" as macro %}
 
 <h6>Date</h6>
-<form class="form-inline">
-    <div class="form-group"><div style="position: relative;right: -5px;">{% spaceless %}
-                <input type="text" style="width: 55px;" value="{{ query.from|default(1490) }}" class="text-center input-sm form-control"/>
-                &nbsp;–&nbsp;
-                <input type="text" style="width: 55px;" value="{{ query.to|default(1890) }}" class="text-center input-sm form-control"/>
-            {% endspaceless %}</div></div>
-    <br>
-    <button type="button" style="outline: 0;padding-right: 0; margin-right: 0;" class="btn btn-link">Apply</button>
-</form>
-
-<h6>Type</h6>
 <ul class="list-unstyled">
-    <form>
-        <label>Biographical <input type="checkbox" checked="checked" /></label><br>
-        <label>Education <input type="checkbox" checked="checked" /></label><br>
-        <label>Career <input type="checkbox" checked="checked" /></label><br>
-        <label>Other <input type="checkbox" checked="checked" /></label>
-    </form>
+    <li class="date-refine">
+        <a href="#" data-toggle="modal" data-target="#modal-date">{{ query.from|default(1490) }} – {{ query.to|default(1890) }}</a>
+    </li>
 </ul>
+
+<h6>Types</h6>
+<ul class="list-unstyled">
+    {% set types = ['biographical', 'education', 'career', 'other'] %}
+    {% for type in types %}
+    {% if attribute(query, type) %}
+        <li class="restriction">
+            {{ type|capitalize }}
+            {{ macro.remove_restriction(params|bit_remove('types', constant('AppBundle\\Query::TYPE_' ~(type|upper)))) }}
+        </li>
+    {% endif %}
+    {% endfor %}
+
+    {% for type in types %}
+    {% if not attribute(query, type) %}
+        <li>
+            <a href="{{ path('search', params|bit_add('types', constant('AppBundle\\Query::TYPE_' ~(type|upper)))) }}">{{ type|capitalize }}</a>
+        </li>
+    {% endif %}
+    {% endfor %}
+ </ul>
 
 <h6>Subject</h6>
 <ul class="list-unstyled">
     {% for id, subject in query.subjects %}
         <li class="restriction">
             {{ subject }}
-            {{ macro.remove_restriction(params|remove_subject(id)) }}
+            {{ macro.remove_restriction(params|str_remove('subjects', id)) }}
         </li>
     {% endfor %}
 
-    {% if filter.subjects_short %}
+    {% if filter.subjects_short|length > 1 %}
         {% for subj in filter.subjects_short %}
-            <li><a href="{{ path('search', params|add_subject(subj.id)) }}">{{ subj.title }}</a></li>
+            <li><a href="{{ path('search', params|str_add('subjects', subj.id)) }}">{{ subj.title }}</a></li>
         {% endfor %}
         {% if filter.subjects_count is defined and filter.subjects_count > 7 %}
             <li><a href="#" data-toggle="modal" data-target="#modal-subjects">
@@ -100,7 +107,7 @@
     </ul>
 {% endif %}
 
-{% if query.radius or query.bounds or filter.places %}
+{% if query.radius or query.bounds or query.place or filter.places|length > 1 %}
     <h6>Place</h6>
 
     <ul class="list-unstyled">
